--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 
             try {
                 // Send frame to the server
-                const response = await fetch('http://13.60.93.250:5000/detect', {
+                const response = await fetch('https://2270-13-60-93-250.ngrok-free.app/detect', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ frame: frame })
