--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
     <!-- Image Upload Section -->
     <div id="uploadSection" class="section hidden">
         <h2>Upload an Image for Knife Detection</h2>
-        <form id="uploadForm" method="post" enctype="multipart/form-data" action="https://fd17-51-20-187-79.ngrok-free.app/upload">
+        <form id="uploadForm" method="post" enctype="multipart/form-data" action="https://2bca-16-171-237-184.ngrok-free.app/upload">
             <input type="file" name="file" accept="image/*" required>
             <button type="submit">Upload and Process</button>
         </form>
@@ -205,7 +205,7 @@
 
             try {
                 loading.style.display = 'block';
-                const response = await fetch('https://fd17-51-20-187-79.ngrok-free.app/detect', {
+                const response = await fetch('https://2bca-16-171-237-184.ngrok-free.app/detect', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -317,7 +317,7 @@
             const formData = new FormData();
             formData.append('file', blob, 'recorded_video.mp4');
             try {
-                const response = await fetch('https://fd17-51-20-187-79.ngrok-free.app/process_video', {
+                const response = await fetch('https://2bca-16-171-237-184.ngrok-free.app/process_video', {
                     method: 'POST',
                     body: formData,
                 });
